# axiom-platform

./: .gitignore  README.md  code  pyproject.toml
docs/: architecture.md  business_use_cases.md  problem_statement.md  trust_boundaries.md  verifiable_intent_mandate_design.md
scripts/: smoke_canonical_hash.py  smoke_domain_models.py  smoke_sign_intent.py
src/axiom/api/: main.py
src/axiom/api/routes/: authorizations.py  health.py  mandates.py
src/axiom/crypto/: canonical_json.py  ecdsa_keys.py  hashing.py  signatures.py
src/axiom/domain/: contracts.py  enums.py  models.py  reason_codes.py
src/axiom/repositories/: in_memory_store.py
src/axiom/services/authorization_service/: service.py
src/axiom/services/cart_service/: service.py
src/axiom/services/intent_service/: service.py
src/axiom/services/mandate_signing_service/: service.py
src/axiom/services/mandate_store_service/: service.py
src/axiom/services/merchant_policy_service/: service.py
src/axiom/services/policy_service/: service.py
src/axiom/services/signed_intent_verification_service/: service.py
src/axiom_platform.egg-info/: PKG-INFO  SOURCES.txt
