[project]
name = "axiom-platform"
version = "0.1.0"
description = "GCP-native agentic commerce trust and authorization platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0"
]

[tool.setuptools.packages.find]
where = ["src"]